Correct headerbar missing background

--- a/data/themes/darktable.css
+++ b/data/themes/darktable.css
@@ -679,6 +679,7 @@ filechooserdialog *
 dialog headerbar,
 filechooserdialog headerbar
 {
+  background-color: @border_color;
   margin: 0;
   padding: 0.1em 0.6em;
 }
